# ai-bom-autopilot

./: .env.example  .gitignore  CONSOLIDATION_SUMMARY.md  Dockerfile  FEATURE_COMPLETENESS_ANALYSIS.md  FINAL_SHIP_CONFIRMATION.md  HOW_TO_USE.md  LICENSE  README.md  RUNTIME_TRACING_IMPLEMENTATION.md  SHIP_READINESS_VERIFICATION.py  VALIDATION_REPORT.md  cleanup.sh  demo_ui.py  demo_workflow.py  docker-compose.yml  fix_repo_urls.py  monitor_scan.py  requirements.txt  run.sh  run.sh.backup  run_all_tests.py  run_ml_demo.py  test_scan.py  verify_consolidation.py
apps/: README.md
core/: README.md  __init__.py
docs/: DEMO.md  EMBEDDING_PROVIDERS.md  EMBEDDING_SERVICE.md  HYBRID_SEARCH_IMPLEMENTATION.md  MIGRATIONS.md  ML_MODEL_DETECTION.md  README.md  TASK_5_1_VERIFICATION.md  TASK_7_1_IMPLEMENTATION.md  VALIDATION_REPORT.md  VECTOR_MIGRATION.md
examples/: README.md  example_embeddings_usage.py  example_hybrid_search_usage.py  example_runtime_ml_app.py  example_scan_hf_usage.py  example_vector_migration.py
seed/: README.md  apply_demo_changes.py  create_demo_project.py  test_seed_data.py
seed/sample_project/: .gitignore  Dockerfile  README.md  config.yaml  data_processing.py  evaluation.py  pyproject.toml  requirements.txt  train.py
seed/sample_project/prompts/: classification_prompt.txt  qa_prompt.txt  system_prompt.txt
seed/sample_project/tools/: model_utils.py  requirements.txt
tests/: README.md  test_action_logging.py  test_api_mock.py  test_api_workflow.py  test_bom_diff_policy_integration.py  test_bom_generator.py  test_diff_engine.py  test_e2e_mock.py  (+25 more)
(+37 files in other folders)
