[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sample-ml-project"
version = "1.0.0"
description = "Sample ML project for AI-BOM Autopilot testing"
authors = [
    {name = "AI Team", email = "ai-team@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.10.0",
    "sentence-transformers>=2.2.0",
    "openai>=1.0.0",
    "numpy>=1.20.0",
    "pandas>=1.5.0",
    "scikit-learn>=1.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0"
]
viz = [
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "wandb>=0.15.0"
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true